[gd_scene load_steps=4 format=2]

[ext_resource path="res://Burg/Keller/K07/S09/Szene.gd" type="Script" id=1]
[ext_resource path="res://Burg/Keller/K07/S09/tagnacht.png" type="Texture" id=2]
[ext_resource path="res://Burg/Keller/K07/S09/baum3.png" type="Texture" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 506.52 ],
"_edit_vertical_guides_": [ 1576.51 ]
}

[node name="HScrollBar" type="HScrollBar" parent="."]
margin_left = 48.0
margin_top = 74.0
margin_right = 1576.0
margin_bottom = 102.0
min_value = 1.0
value = 1.0

[node name="HScrollBar2" type="HScrollBar" parent="."]
margin_left = 48.0
margin_top = 126.0
margin_right = 1575.0
margin_bottom = 154.0
min_value = 1.0
value = 1.0

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2( -2.81, 0 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 47.4666, 22.1004 )
scale = Vector2( 0.795333, 1.84421 )
texture = ExtResource( 2 )
centered = false

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 979.276, 507.107 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 52.8152
margin_top = 55.595
margin_right = 124.815
margin_bottom = 69.595
text = "Hintergrund"

[node name="Label2" type="Label" parent="."]
margin_left = 56.9848
margin_top = 109.105
margin_right = 132.985
margin_bottom = 123.105
text = "Objektfarbe"
[connection signal="scrolling" from="HScrollBar" to="." method="_on_HScrollBar_scrolling"]
[connection signal="scrolling" from="HScrollBar2" to="." method="_on_HScrollBar2_scrolling"]
